secondfile/objects/DHStatus_Ethernet_Check_Parameters__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters</description>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Ethernet Check Parameters</relationshipLabel>
        <relationshipName>DHStatus_Ethernet_Check_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters</description>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters</description>
        <label>Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Ethernet Check Parameters</label>
    <nameField>
        <displayFormat>ECP-{0000}</displayFormat>
        <label>DHStatus-Ethernet Check Parameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Ethernet Check Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>